--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,4 +235,24 @@ ion-icon {
         rgba(0, 0, 0, 0.12) 0px 4px 6px,
         rgba(0, 0, 0, 0.17) 0px 12px 13px,
         rgba(0, 0, 0, 0.09) 0px -3px 5px;
+
+    animation: floatImage 4s ease-in-out infinite;
+}
+
+@keyframes floatImage {
+    0%{
+        transform: translateY(0);
+    }
+
+    50%{
+        transform: translateY(-1.5rem);
+    }
+
+    70%{
+        transform: translateY(1rem);
+    }
+
+    100%{
+        transform: translateY(0);
+    }
 }
