--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,14 +64,29 @@ img {
 
 section {
     overflow: hidden;
-    padding: 5rem 0;
+    padding: 7rem 0;
 }
 
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    align-items: center;
+    grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
+    grid-template-rows: 40rem;
     justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+.title {
+    position: relative;
+    display: inline-block;
+    font-size: 4rem;
+    font-weight: 800;
+}
+
+.title-sm {
+    font-size: 1.6rem;
+    font-weight: 800;
+    color: var(--casualColor);
 }
 
 .text {
@@ -121,7 +136,7 @@ nav {
 }
 
 .name {
-    font-size: 2rem;
+    font-size: 2.5rem;
     font-weight: 800;
     color: var(--darkTwo);
 }
@@ -176,7 +191,7 @@ ion-icon {
 
 /* Hero Section Starts */
 .hero-container {
-    margin: 1.5rem auto;
+    margin: 2rem auto;
     width: 100%;
     min-height: calc(100vh - 15vh);
     display: flex;
@@ -203,10 +218,9 @@ ion-icon {
 
 .hero-intro .country {
     background: linear-gradient(to bottom,
-    rgb(255, 81, 0),
-    rgb(255, 255, 255),
-    rgb(0, 112, 58)
-    );
+            rgb(255, 81, 0),
+            rgb(255, 255, 255),
+            rgb(0, 112, 58));
     -webkit-background-clip: text;
     color: transparent;
     text-transform: uppercase;
@@ -229,7 +243,8 @@ ion-icon {
 .hero-image img {
     max-width: 350px;
     height: auto;
-    border-radius: 30% 70% 70% 30% / 30% 30% 70% 70% !important;
+    /* border-radius: 30% 70% 70% 30% / 30% 30% 70% 70% !important; */
+    border-radius: 50%;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
         rgba(0, 0, 0, 0.12) 0px -12px 30px,
         rgba(0, 0, 0, 0.12) 0px 4px 6px,
@@ -240,19 +255,106 @@ ion-icon {
 }
 
 @keyframes floatImage {
-    0%{
+    0% {
         transform: translateY(0);
     }
 
-    50%{
+    50% {
         transform: translateY(-1.5rem);
     }
 
-    70%{
-        transform: translateY(1rem);
-    }
-
-    100%{
+    100% {
         transform: translateY(0);
     }
+}
+
+/* About Section */
+.section-header .title::before {
+    content: attr(data-title);
+    display: block;
+    margin-top: 0.5rem;
+    color: var(--casualColor);
+    font-size: 1.15rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+}
+
+.section-header .title::after {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 200px;
+    height: 5px;
+    border-radius: 10px;
+    background-color: var(--casualColor);
+}
+
+.section-header {
+    text-align: center;
+    margin-bottom: 1.5rem;
+}
+
+#about {
+    position: relative;
+    overflow: hidden;
+}
+
+.about-containers {
+    gap: 2rem;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+}
+
+.about-details-container {
+    justify-content: center;
+    flex-direction: column;
+}
+
+.about-containers,
+.about-details-container {
+    display: flex;
+}
+
+.about-pic {
+    max-width: 350px;
+    border-radius: 2rem;
+}
+
+.details-container {
+    padding: 1rem;
+    flex: 1;
+    background: var(--lightOne);
+    border-radius: 2rem;
+    border: var(--casualColor) 0.1rem solid;
+    border-color: rgb(163, 163, 163);
+    text-align: center;
+}
+
+.details-container > p{
+    color: var(--darkOne);
+}
+
+.section-container {
+    display: flex;
+    margin: 2rem auto;
+    gap: 1rem;
+}
+
+.icon{
+    max-width: 40px;
+    height: auto;
+}
+
+.section__pic-container,
+.about-details-container{
+    min-width: 50%;
+}
+
+.section__pic-container{
+    display: flex;
+    justify-content: center;
 }
