--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,7 @@ section {
 }
 
 .title-sm {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     font-weight: 800;
     color: var(--casualColor);
 }
@@ -429,4 +429,67 @@ article {
 
 article img {
     max-width: 80px;
+}
+
+
+/* Project Section */
+#project {
+    position: relative;
+    overflow: hidden;
+}
+
+.project-detail-container {
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: stretch; /* Ensures all items stretch to the same height */
+    flex-wrap: wrap;
+    gap: 2rem;
+}
+
+.projects {
+    border: 0.1rem solid rgb(163, 163, 163);
+    border-radius: 2rem;
+    width: 100%;
+    max-width: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; /* Ensures space is distributed between elements */
+    align-items: center;
+    padding: .5rem;
+    background-color: var(--lightOne);
+    flex-grow: 1; /* Allows the project containers to grow as needed */
+}
+
+.projects img {
+    max-width: 340px;
+    border-radius: 2rem;
+    margin: .8rem;
+}
+
+.projects h3{
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.project-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; 
+    flex-grow: 1;
+}
+
+.article {
+    text-align: justify;
+    width: 100%;
+    line-height: 1.5;
+}
+
+.project-btns {
+    margin-top: 1rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex: 1;
+    gap: 1rem;
 }
