--- a/assets/css/media_queries.css
+++ b/assets/css/media_queries.css
@@ -76,6 +76,17 @@
 
 }
 
+@media screen and (max-width: 925px) {
+    .contact-detail-container{
+        width: 100%;
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+        "google-location"
+        "contact-form"
+        "contact-info";
+    }
+}
+
 @media screen and (max-width: 785px) {
     .about-pic{
         max-width: 250px;
@@ -210,5 +221,27 @@
 
     section{
         padding: 3rem 0;
+    }
+
+    .contact .title{
+        font-size: 1.8rem;
+        text-align: center;
+    }
+
+    .contact-info .text{
+        text-align: justify;
+    }
+
+    .information p{
+        font-size: 0.9rem;
+    }
+
+    .contact-icon{
+        min-width: 40px;
+        height: 40px;
+    }
+
+    .contact-icon ion-icon{
+        font-size: 25px;
     }
 }
